# cropbot

./: .gitignore  Cargo.toml  README.md  conf.toml  harvest.py  rotation_assistant.py
atlas_tables_3.26/: README.md  conf.toml  y0_b0_p25.csv  y0_b0_p35.csv  y0_b0_p45.csv  y0_b25_p0.csv  y0_b25_p25.csv  y0_b25_p35.csv  y0_b25_p45.csv  y0_b35_p0.csv  y0_b35_p25.csv  y0_b35_p35.csv  y0_b35_p45.csv  y0_b45_p0.csv  y0_b45_p25.csv  y0_b45_p35.csv  y0_b45_p45.csv  y25_b0_p0.csv  y25_b0_p25.csv  y25_b0_p35.csv  y25_b0_p45.csv  y25_b25_p0.csv  y25_b25_p25.csv  y25_b25_p35.csv  y25_b25_p45.csv  y25_b35_p0.csv  y25_b35_p25.csv  y25_b35_p35.csv  y25_b35_p45.csv  y25_b45_p0.csv  y25_b45_p25.csv  y25_b45_p35.csv  y25_b45_p45.csv  y35_b0_p0.csv  y35_b0_p25.csv  y35_b0_p35.csv  y35_b0_p45.csv  y35_b25_p0.csv  y35_b25_p25.csv  y35_b25_p35.csv  (+24 more)
src/: lib.rs  main.rs
